{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "7a9b88c6-9951-4507-bc9e-eb41b5c2b2e0",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "bd102f3f-0759-4db5-b847-0dcb837863b8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera",
                    "type": "Button",
                    "id": "2d645426-787e-4b8b-b2c7-94a93726e5c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "757dd5f2-41d4-4eac-84d8-08f1c850b34a",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "769854ac-1931-4538-ad13-2eff9e67ebc1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3437a93a-6c59-453f-938d-2a1f90d86fc5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "65c4600c-dc09-4f95-b051-aa5d4078e68e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "93567ba9-6347-494a-a9db-b684a99ece67",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "51619538-6c00-4031-8e57-19bf5ac1d792",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec713dab-b639-4ece-98e0-d1bcc3f643a5",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}